--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=Rubik"
+      href="https://fonts.googleapis.com/css?family=Rubik:300,400,500"
       rel="stylesheet"
     />
     <!--
